2003-11-05  Joe Shaw  <joe@ximian.com>

	* configure.in: 1.99.31.  Add --enable-libgpg-error because
	libgcrypt is broken and doesn't add it to its -config script
	itself.

2003-11-03  Joe Shaw  <joe@ximian.com>

	* configure.in: 1.99.30

2003-11-03  Tambet Ingo  <tambet@ximian.com>

	* libsoup/soup-context.c (soup_context_uri_equal): Check if ports are
	also equal.

2003-10-28  Joe Shaw  <joe@ximian.com>

	* configure.in: 1.99.29

	* libsoup/soup-uri.c (escape_username_password,
	unescape_username_password): Escape usernames and passwords which
	contain ':', '@', '/' and '%'.
	(soup_uri_new): Unescape username and password.
	(soup_uri_to_string): Escape username and password.

2003-09-26  Dan Winship  <danw@ximian.com>

	* configure.in: 1.99.28

	* libsoup/soup-auth.c (basic_pspace_func): strip the trailing
	slash from the path so that it matches what it will be compared
	against later. #48880

2003-09-18  Joe Shaw  <joe@ximian.com>

	* configure.in: 1.99.27

	* libsoup/soup-server.c (close_connection): Closes the server
	connection.
	(destroy_message): Call close_connection() instead of doing it by
	hand.
	(error_cb): Call close_connection() before destroy_message() so
	that the connection is always closed on an error.  Fixes a CPU
	wedging case.

2003-09-12  Dan Winship  <danw@ximian.com>

	* configure.in: 1.99.26

2003-09-03  Dan Winship  <danw@ximian.com>

	* libsoup/soup-server.c (read_done_cb, write_done_cb): Unref the
	reader/writer rather than leaking them.

	* libsoup/md5-utils.h: Add some #defines here to avoid namespace
	pollution

2003-08-07  Dan Winship  <danw@ximian.com>

	* libsoup/soup-auth.c (soup_auth_lookup, soup_auth_set_context,
	soup_auth_invalidate): These are all really SoupContext functions,
	so move them to soup-context.c (and rename them appropriately).
	(soup_auth_get_protection_space): New method to get the
	"protection space" of an auth (paths where it is valid).
	(soup_auth_invalidate): New method to try to un-authenticate an