@@ -1,3 +1,8 @@
+2003-11-06  Joe Shaw  <joe@ximian.com>
+
+	* acinclude.m4: Added.  Contains the m4 magic from gpg-error.m4 so
+	you don't need gpg-error to tell it you don't want gpg-error.
+
 2003-11-05  Joe Shaw  <joe@ximian.com>
 
 	* configure.in: 1.99.31.  Add --enable-libgpg-error because
